<resources>
    <string name="app_name">pg_community_android</string>


    <!--Title string-->
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_profile">Profile</string>
    <string name="title_matrimony">Matrimony</string>
    <string name="title_jobs">Jobs</string>
    <string name="title_add_jobs">Add Jobs</string>
    <string name="title_welcome">Welcome</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="app_market_link">not yet</string>
    <string name="app_google_play_store_link">not yet</string>
    <string name="app_welcome_page">Welcome...</string>

    <!--Login Page-->
    <string name="prompt_password">Enter your password</string>
    <string name="prompt_email">Enter your e-mail</string>
    <string name="action_sign_in_short">Done</string>
    <string name="action_sign_in">Login</string>
    <string name="empty_email">Please enter your mail id</string>
    <string name="invalid_email">The mail id you entered is invalid</string>
    <string name="empty_password">Please enter your password</string>

    <!--Register Page-->
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="action_stay_logged">Stay logged in</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="referredby">Referred by</string>


    <string name="empty_name">Please enter your name</string>
    <string name="empty_surname">Please enter your surname</string>
    <string name="empty_confirm_password">Please enter your confirm password</string>
    <string name="empty_password_mismatch">Please make sure your password and confirm password are same.</string>
    <string name="father_name">Father name</string>
    <string name="mother_name">Mother name</string>
    <string name="phone_number">Phone number</string>
    <string name="native_place">Native place</string>
    <string name="native_city">Native city</string>
    <string name="current_city">Current city</string>
    <string name="current_state">Current state</string>
    <string name="current_country">Current country</string>
    <string name="action_save">Save</string>
    <string name="student">Student</string>
    <string name="employee">Employee</string>
    <string name="college_name">College name</string>
    <string name="degree_name">Degree</string>
    <string name="company_name">Company name</string>
    <string name="designation">Designation</string>
    <string name="about_work">About Work Experience</string>

    <string-array name="job_types">
        <item>Referral</item>
        <item>Forwarded</item>
        <item>Others</item>
    </string-array>
    <string name="job_from">Job from:</string>
    <string name="job_name">Job name:</string>
    <string name="job_description">Job Description:</string>
    <string name="job_contact_number">Contact person mobile no:</string>
    <string name="job_contact_mail">Contact person mail-id:</string>
    <string name="job_select">Add Job Image</string>

    <string name="version">Version:</string>
    <string name="home">home</string>
    <string name="about">About</string>
    <string name="matrimony">Matrimony</string>
    <string name="jobs">Jobs</string>
    <string name="logout">Logout</string>

</resources>
